--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,18 @@
 .canvas {
   width: 300px;
+  margin: 1rem;
+}
+
+.App {
+  display: flex;
+}
+
+.text {
+  display: flex;
+  flex-direction: column;
+}
+
+textarea {
+  padding: 0.2rem;
+  margin: 1rem;
 }
